[package]
name = "redisson"
version = "0.1.0"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2021"
description = "A Redis client for Rust implementing Redisson-like distributed objects and locks"
readme = "README.md"
keywords = ["akita", "orm", "mysql", "sqlite"]
categories = ["data-structures", "database-implementations"]
homepage = "https://github.com/wslongchen/akita"
repository = "https://github.com/wslongchen/akita"
documentation = "https://docs.rs/akita"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
[dependencies]
redis = { version = "1.0.2", features = ["r2d2", "tokio-comp", "tokio-native-tls-comp", "cluster-async","tls-rustls", "connection-manager","sentinel", "streams", "cluster"] }
r2d2 = "0.8"
deadpool = { version = "0.10", features = ["managed", "rt_tokio_1"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
once_cell = "1.18"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bloom = "0.3"
parking_lot = "0.12"
lru = "0.16.3"
tokio-stream = "0.1.18"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async", "async_futures"] }

[[bench]]
name = "redisson_benchmark"
harness = false